Add functionality for toolbar hide/show buttons and prevent enter keydown event into doc

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,9 @@ body {
 .btn-group {
     margin-left: 5px;
 }
+button[data-toggle="false"] ~ .btn-group {
+  display: none;
+}
 
 // TOOLBAR
 .toolbar {
