--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,10 +35,19 @@ body {
 button[data-toggle="false"] ~ .btn-group {
   display: none;
 }
+button[data-state="true"] {
+  background-color: #6d6d6d;
+  color: white;
+}
 // TOOLBAR
 .toolbar {
     margin-top: 10px;
     display: flex;
+}
+// PROPBAR
+.propbar {
+  margin-bottom: 10px;
+  display: none;
 }
 
 // DOCUMENT
