--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,13 +32,13 @@ body {
 .btn-group {
     margin-left: 5px;
 }
-button[data-toggle="false"] ~ .btn-group {
-  display: none;
-}
-button[data-state="true"] {
-  background-color: #6d6d6d;
-  color: white;
-}
+// button[data-toggle="false"] ~ .btn-group {
+//   display: none;
+// }
+// button[data-state="true"] {
+//   background-color: #6d6d6d;
+//   color: white;
+// }
 // TOOLBAR
 .toolbar {
     margin-top: 10px;
